# gcp_cf_bucket_trigger

./: .gitignore  .releaserc.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: dependabot.yml  deptry.yml  semantic_release.yml  terraform_deploy.yml  test.yml
cloud_function/: main.py  requirements.txt
scripts/: bucket_upload.sh  delete_bucket_data.sh  list_buckets.sh  tf_deploy.sh  todos.sh
scripts/gcloud/: service_account_roles.sh
simple_bucket_trigger/exp_1/: experiment_config.json  generate_files.py  inspect_logs.py  run.py
tf-infra/: README.md
tf-infra/app/: .terraform.lock.hcl  main.tf  terraform.tfvars
tf-infra/project/: .terraform.lock.hcl  main.tf
